<resources>
    <string name="app_name">HealthyBites</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_account_register">No account? <font fgcolor="#1E521F">Register.</font></string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account_sign_in">Have an account?<font fgcolor="#1E521F">Sign in.</font></string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="date_picker">DATE_PICKER</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="diet">Diet</string>
    <string name="analysis">Analysis</string>
    <string name="recommend">Recommend</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_diet">Add Diet</string>
    <string name="cancel">Cancel</string>
    <string name="client_id">674403ecb99a461cb7650568ae290f98</string>
    <string name="client_secret">80aa7622a33f42a5a18c4a7738f4b13b</string>
    <string name="email_is_invalid">Email is inValid!</string>
    <string name="password_mismatch_in_two_type">Password mismatch in two type.</string>
    <string name="add_food">Add Food</string>
    <string name="food">Food</string>
    <string name="weight">Weight</string>
    <string name="calories">Calories</string>
    <string name="amount_g">amount(g)</string>
    <string name="nutrition">Nutrition</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="g">g</string>
    <string name="kcal">KCAL</string>
    <string name="name">Name</string>
    <string name="weight_g">Weight(g)</string>
    <string name="add_to_diet">Add to diet</string>
    <string name="no_matches_found">No matches found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_diet">Diet</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_recommend">Recommend</string>
    <string name="hint_nutrition_is_in_g_100g_calories_in_kcal">Hint: Nutrition is in g/100g. Calories in KCAL.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_login">no login</string>
    <string name="logout">logout</string>
    <string name="current_email">Current Email:</string>
    <string name="mine">Mine</string>
</resources>