<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_diet">

    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.example.healthybites.ui.DietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.healthybites.ui.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_recommend"
        android:name="com.example.healthybites.ui.RecommendFragment"
        android:label="@string/title_recommend"
        tools:layout="@layout/fragment_recommend" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.healthybites.ui.MineFragment"
        android:label="@string/mine"
        tools:layout="@layout/fragment_mine" />
</navigation>