<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AuthActivity">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Login Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#70B53F"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:text="1@q.com"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordEditTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="123456"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login" />

            <ProgressBar
                android:id="@+id/login_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/errorTextViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_account_register" />
        </LinearLayout>

        <!-- Register Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#70B53F"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditTextRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:text="1@q.com"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordEditTextRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="123456"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:text="123456"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_up" />

            <ProgressBar
                android:id="@+id/register_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/errorTextViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginButtonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/have_an_account_sign_in" />
        </LinearLayout>
    </ViewFlipper>
</LinearLayout>
